fix(comapny-login): add error notification docs(rebuild)

--- a/src/app/no-auth/register/register.component.html
+++ b/src/app/no-auth/register/register.component.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a routerLinkActive="active" [routerLink]="['/login/COMPANY']" class="btn" translate>
+                    <a routerLinkActive="active" [routerLink]="['/login/company']" class="btn" translate>
                         Pages.Index.LookingForLogin
                     </a>
                 </li>
