--- a/src/app/no-auth/login/login.component.html
+++ b/src/app/no-auth/login/login.component.html
@@ -35,8 +35,7 @@
                                 </div>
                                 <div class="card-content text-center">
                                     <button type="button" class="btn btn-fill btn-wd " (click)="login()">
-                                        <i class="fab fa-google" *ngIf="!isLoading"></i>
-                                        <i class="fas fa-spinner fa-spin" *ngIf="isLoading"></i>
+                                        <i class="fab fa-google"></i>
                                         {{'Dictionary.Login' | translate}}
                                     </button>
                                 </div>
