--- a/src/app/auth/internships/details/internship-details.component.html
+++ b/src/app/auth/internships/details/internship-details.component.html
@@ -18,6 +18,19 @@
                 <div class="card" *ngIf="internship">
                     <div class="card-header">
                         <h4 class="card-title" translate>
+                            Dictionary.Status
+                        </h4>
+                    </div>
+                    <div class="card-content">
+                        <div class="form-group">
+                            <label translate>Dictionary.Status</label>
+                            <p class="form-control-static">{{('Enums.InternshipStatusType.' + InternshipStatusType[internship.status]) | translate}}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card" *ngIf="internship">
+                    <div class="card-header">
+                        <h4 class="card-title" translate>
                             Dictionary.Details
                         </h4>
                     </div>
@@ -51,7 +64,7 @@
                         </h4>
                     </div>
                     <div class="card-content">
-                        <div [innerHTML]="internship.description"></div>
+                        <div [innerHTML]="domSanitizer.bypassSecurityTrustHtml(internship.description)"></div>
                     </div>
                 </div>
 
