--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,3 +67,7 @@ body.blur .wrapper {
 [ng-reflect-router-link] {
     cursor: pointer;
 }
+
+ul.dropdown-menu li.disabled a {
+    color: rgba(119, 119, 119, 0.8) !important;
+}
