--- a/src/app/auth/internships/approve-list/internships-approve-list.component.html
+++ b/src/app/auth/internships/approve-list/internships-approve-list.component.html
@@ -4,8 +4,8 @@
             <div class="col-md-10 col-md-offset-1">
                 <div class="card">
                     <div class="card-header">
-                        <h4 class="card-title" translate>Dictionary.OwnInternships</h4>
-                        <p class="category" translate>Pages.Company.SubTitle</p>
+                        <h4 class="card-title" translate>Pages.ApproveInternshipList.Title</h4>
+                        <p class="category" translate>Pages.ApproveInternshipList.SubTitle</p>
                     </div>
                     <div class="card-content table-responsive table-full-width">
                         <table class="table">
@@ -31,10 +31,7 @@
                                 </tr>
                                 <tr *ngFor="let row of internshipTable.dataRows">
                                     <td class="td-actions text-center">
-                                        <a *ngIf="row.status < InternshipStatusType.Closed" rel="tooltip" title="{{'Dictionary.Edit' | translate}}" [routerLink]="'/auth/internships/edit/' + row.id" class="btn btn-primary btn-simple btn-xs">
-                                            <i class="ti-pencil"></i>
-                                        </a>
-                                        <a rel="tooltip" title="{{'Dictionary.Details' | translate}}" [routerLink]="'/auth/internships/details/' + row.id" class="btn btn-primary btn-simple btn-xs">
+                                        <a rel="tooltip" title="{{'Dictionary.Details' | translate}}" [routerLink]="'/auth/internships/approve/' + row.id" class="btn btn-primary btn-simple btn-xs">
                                             <i class="fas fa-eye"></i>
                                         </a>
                                     </td>
