--- a/src/app/auth/internships/approve/internship-approve.component.html
+++ b/src/app/auth/internships/approve/internship-approve.component.html
@@ -5,8 +5,9 @@
                 <div class="card" *ngIf="internship">
                     <div class="card-header">
                         <h4 class="card-title" translate>
-                            Pages.InternshipDetails.Title
+                            Pages.ApproveInternship.Title
                         </h4>
+                        <p class="category" translate>Pages.ApproveInternship.SubTitle</p>
                     </div>
                     <div class="card-content">
                         <div class="form-group">
@@ -15,7 +16,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card" *ngIf="internship && canExec(authService.currentUser.role.type,[RoleType.Company,RoleType.Professor])">
+                <div class="card" *ngIf="internship">
                     <div class="card-header">
                         <h4 class="card-title" translate>
                             Dictionary.Status
@@ -23,12 +24,17 @@
                     </div>
                     <div class="card-content">
                         <div class="form-group">
-                            <label translate>Dictionary.Status</label>
-                            <p class="form-control-static">{{('Enums.InternshipStatusType.' + InternshipStatusType[internship.status]) | translate}}</p>
+                            <select class="selectpicker" data-style="btn btn-block" [(ngModel)]="internship.status">
+                                <option *ngFor="let status of states" [value]="status.value" [disabled]="status.disabled">{{('Enums.InternshipStatusType.' + status.text) | translate}}</option>
+                            </select>
                         </div>
                         <div class="form-group" [hidden]="internship.status != InternshipStatusType.Rejected">
                             <label translate>Dictionary.RejectReason</label>
-                            <p class="form-control-static" [innerHTML]="internship.rejectReason ? domSanitizer.bypassSecurityTrustHtml(internship.rejectReason) : ('Dictionary.NotDefined' | translate)"></p>
+                            <ckeditor [(ngModel)]="internship.rejectReason" [config]="config"></ckeditor>
+                        </div>
+                        <div class="text-right">
+                            <button type="button" class="btn btn-success" (click)="save()" *ngIf="internship.status == InternshipStatusType.Approved || internship.status == InternshipStatusType.Rejected"
+                                translate>Dictionary.Save</button>
                         </div>
                     </div>
                 </div>
@@ -76,8 +82,6 @@
                     <div class="card-content">
                         <div>
                             <button type="button" class="btn btn-default" [routerLink]="'/auth/internships'" translate>Dictionary.Back</button>
-                            <button type="button" class="btn btn-success pull-right" [routerLink]="'/auth/internships'" *ngIf="internship.status == InternshipStatusType.Approved"
-                                translate>Dictionary.ProposeYourSelf</button>
                         </div>
                     </div>
                 </div>
