--- a/src/app/auth/internships/edit/internship-edit.component.html
+++ b/src/app/auth/internships/edit/internship-edit.component.html
@@ -8,7 +8,7 @@
                             Pages.AddInternship.Title
                         </h4>
                     </div>
-                    <div class="card-content">
+                    <div class="card-content" *ngIf="selectedCompanyId">
                         <div class="form-group">
                             <label translate>Dictionary.Company</label>
                             <select class="selectpicker" data-style="btn btn-block" [(ngModel)]="selectedCompanyId" (change)="updateAddress()">
@@ -137,7 +137,8 @@
                         <div>
                             <button type="button" class="btn btn-default" [routerLink]="'/auth/internships/company'" translate>Dictionary.Cancel</button>
                             <button type="button" class="btn btn-danger" (click)="delete()" *ngIf="internship.status < InternshipStatusType.Closed" translate>Dictionary.Delete</button>
-                            <button type="button" class="btn btn-success pull-right" (click)="save()" *ngIf="internship.status < InternshipStatusType.Closed" translate>Dictionary.Save</button>
+                            <button type="button" class="btn btn-success pull-right" (click)="save()" *ngIf="internship.status < InternshipStatusType.Closed"
+                                translate>Dictionary.Save</button>
                         </div>
                     </div>
                 </div>
