Refactor LoadingHelper to LoadingService Add routes title in route data

--- a/src/app/auth/internships/add/internship-add.component.html
+++ b/src/app/auth/internships/add/internship-add.component.html
@@ -5,7 +5,7 @@
                 <div class="card">
                     <div class="card-header">
                         <h4 class="card-title" translate>
-                            Pages.AddInternship.Title
+                            Pages.InternshipAdd.Title
                         </h4>
                     </div>
                     <div class="card-content">
