--- a/src/app/auth/internships/approve/internship-approve.component.html
+++ b/src/app/auth/internships/approve/internship-approve.component.html
@@ -49,20 +49,29 @@
                         <div class="row form-group">
                             <div class="col-lg-6 col-xs-12">
                                 <label translate>Dictionary.Address</label>
-                                <p class="form-control-static">{{internship.address.street}} {{internship.address.number}}, {{internship.address.city}}
-                                    ({{internship.address.state}})
-                                </p>
+                                <p class="form-control-static">{{internship.address | address}}</p>
+                            </div>
+                        </div>
+
+                        <div class="row form-group">
+                            <div class="col-md-6">
+                                <label translate>Dictionary.StartDate</label>
+                                <p class="form-control-static">{{internship.startDate | date}}</p>
+                            </div>
+                            <div class="col-md-6">
+                                <label translate>Dictionary.EndDate</label>
+                                <p class="form-control-static">{{internship.endDate | date}}</p>
                             </div>
                         </div>
 
                         <div class="form-group row">
                             <div class="col-sm-6">
                                 <label translate>Dictionary.TotalHours</label>
-                                <p class="form-control-static">{{internship.totalHours}}</p>
+                                <p class="form-control-static">{{internship.totalHours || ('Dictionary.NotSpecified' | translate)}}</p>
                             </div>
                             <div class="col-sm-6">
                                 <label translate>Dictionary.StudentsNumber</label>
-                                <p class="form-control-static">{{internship.studentsNumber}}</p>
+                                <p class="form-control-static">{{internship.studentsNumber || ('Dictionary.NotSpecified' | translate)}}</p>
                             </div>
                         </div>
                     </div>
