--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="app-spinner" *ngIf="loadingHelper.isLoading">
+<div class="app-spinner" *ngIf="loadingService.isLoading">
     <div class="spinner"> </div>
 </div>
 <router-outlet></router-outlet>
