--- a/src/app/auth/internships/approve-list/internships-approve-list.component.html
+++ b/src/app/auth/internships/approve-list/internships-approve-list.component.html
@@ -4,8 +4,8 @@
             <div class="col-md-10 col-md-offset-1">
                 <div class="card">
                     <div class="card-header">
-                        <h4 class="card-title" translate>Pages.ApproveInternshipList.Title</h4>
-                        <p class="category" translate>Pages.ApproveInternshipList.SubTitle</p>
+                        <h4 class="card-title" translate>Pages.InternshipApproveList.Title</h4>
+                        <p class="category" translate>Pages.InternshipApproveList.SubTitle</p>
                     </div>
                     <div class="card-content table-responsive table-full-width">
                         <table class="table">
