--- a/src/app/auth/internships/own-company/internships-own-company.component.html
+++ b/src/app/auth/internships/own-company/internships-own-company.component.html
@@ -5,7 +5,7 @@
                 <div class="card">
                     <div class="card-header">
                         <h4 class="card-title" translate>Dictionary.OwnInternships</h4>
-                        <p class="category" translate>Pages.Company.SubTitle</p>
+                        <p class="category" translate>Pages.InternshipOwnCompany.SubTitle</p>
                     </div>
                     <div class="card-content table-responsive table-full-width">
                         <table class="table">
