--- a/src/app/auth/internships/approve/internship-approve.component.html
+++ b/src/app/auth/internships/approve/internship-approve.component.html
@@ -5,9 +5,9 @@
                 <div class="card" *ngIf="internship">
                     <div class="card-header">
                         <h4 class="card-title" translate>
-                            Pages.ApproveInternship.Title
+                            Pages.InternshipApprove.Title
                         </h4>
-                        <p class="category" translate>Pages.ApproveInternship.SubTitle</p>
+                        <p class="category" translate>Pages.InternshipApprove.SubTitle</p>
                     </div>
                     <div class="card-content">
                         <div class="form-group">
@@ -24,7 +24,7 @@
                     </div>
                     <div class="card-content">
                         <div class="form-group">
-                            <select class="selectpicker" data-style="btn btn-block" [(ngModel)]="internship.status">
+                            <select class="selectpicker" data-style="btn btn-block" [(ngModel)]="internship.status" (ngModelChange)="toNumber()">
                                 <option *ngFor="let status of states" [value]="status.value" [disabled]="status.disabled">{{('Enums.InternshipStatusType.' + status.text) | translate}}</option>
                             </select>
                         </div>
@@ -90,7 +90,7 @@
                 <div class="card" *ngIf="internship">
                     <div class="card-content">
                         <div>
-                            <button type="button" class="btn btn-default" [routerLink]="'/auth/internships'" translate>Dictionary.Back</button>
+                            <button type="button" class="btn btn-default" [routerLink]="'/auth/internships/approve'" translate>Dictionary.Back</button>
                         </div>
                     </div>
                 </div>
