--- a/src/app/auth/internships/candidate/internship-candidate.component.html
+++ b/src/app/auth/internships/candidate/internship-candidate.component.html
@@ -5,7 +5,7 @@
                 <div class="card">
                     <div class="card-header">
                         <h4 class="card-title" translate>
-                            Pages.Candidate.Title
+                            Pages.InternshipCandidate.Title
                         </h4>
                     </div>
                     <div class="card-content">
@@ -16,7 +16,7 @@
                                 loading-text="{{'Dictionary.Loading' | translate}}..." value-formatter="name" list-formatter="name"
                                 max-num-list="20" />
                             <span translate>
-                                Pages.Candidate.ProfessorDescription
+                                Pages.InternshipCandidate.ProfessorDescription
                             </span>
                         </div>
                     </div>
